flux/infrastructure/webapps/homepage/patches/landing-page-gateway.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: landing-page-gateway
  namespace: webapps
  annotations:
    gethomepage.dev/description: Landing page
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: mdi-domain
    gethomepage.dev/name: BeckCloud
    gethomepage.dev/weight: '10'
    gethomepage.dev/href: https://becklab.cloud
